[gd_scene load_steps=5 format=3 uid="uid://rafj70kquf3l"]

[ext_resource type="Texture2D" uid="uid://dboc2q5ry8sqm" path="res://assets/UI/cache_ui_frame.png" id="1_16h60"]
[ext_resource type="Texture2D" uid="uid://bwbifnj018boq" path="res://assets/UI/cache_button.png" id="2_0hi03"]
[ext_resource type="Script" path="res://src/UI/dialogue.gd" id="2_ychtn"]
[ext_resource type="PackedScene" uid="uid://d3pf8kbdk01t7" path="res://src/UI/punnet_square.tscn" id="4_ctk8s"]

[node name="Dialogue" type="NinePatchRect" groups=["dialogue"]]
process_mode = 3
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("1_16h60")
region_rect = Rect2(1, 1, 22, 22)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
script = ExtResource("2_ychtn")

[node name="DialogueText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 305.0
offset_bottom = 145.0
theme_override_font_sizes/normal_font_size = 12
text = "Hello World!"

[node name="OKButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 144.0
offset_right = 180.0
offset_bottom = 166.0
texture_normal = ExtResource("2_0hi03")

[node name="RichTextLabel" type="RichTextLabel" parent="OKButton"]
layout_mode = 0
offset_left = 8.0
offset_top = -1.0
offset_right = 42.0
offset_bottom = 24.0
mouse_filter = 2
text = "OK"

[node name="YesButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 144.0
offset_right = 96.0
offset_bottom = 166.0
texture_normal = ExtResource("2_0hi03")

[node name="RichTextLabel" type="RichTextLabel" parent="YesButton"]
layout_mode = 0
offset_left = 5.0
offset_top = -1.0
offset_right = 39.0
offset_bottom = 24.0
mouse_filter = 2
text = "YES"

[node name="NoButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 144.0
offset_right = 264.0
offset_bottom = 166.0
texture_normal = ExtResource("2_0hi03")

[node name="RichTextLabel" type="RichTextLabel" parent="NoButton"]
layout_mode = 0
offset_left = 8.0
offset_top = -1.0
offset_right = 42.0
offset_bottom = 24.0
mouse_filter = 2
text = "NO"

[node name="VisualsContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 87.0
offset_right = 320.0
offset_bottom = 116.0
mouse_filter = 2
alignment = 1

[node name="PunnetSquare" parent="VisualsContainer" instance=ExtResource("4_ctk8s")]
visible = false
layout_mode = 2
